Changed some stuff

--- a/.config/yabar/yabar.conf
+++ b/.config/yabar/yabar.conf
@@ -1,10 +1,7 @@
-#Hi!, this config is not intended to become an example of beauty in yabar.
-#It is just intended to show an example (specifically an example config that uses internal blocks) of what you can do using yabar.
-
-bar-list = ["topbar"];
-topbar:{
+bar-list = ["bottombar"];
+bottombar:{
 	font: "Droid Sans, FontAwesome Bold 9";
-	block-list: ["ya_diskspace", "ya_ws", "ya_title", "ya_date", "ya_diskusage", "ya_volume", "ya_uptime", "ya_cpu", "ya_thermal", "ya_brightness", "ya_bw", "ya_mem", "ya_disk", "ya_bat", "ya_wifi"];
+	block-list: ["ya_ws", "ya_title", "ya_date", "ya_volume", "ya_cpu", "ya_mem"];
 	position: "bottom";
 	gap-horizontal: 10;
 	gap-vertical: 10;
@@ -16,7 +13,7 @@ topbar:{
 	overline-size: 2;
 	slack-size: 4;
 	#border-size: 2;
-	#monitor: "LVDS1 HDMI1"; # get names from `xrandr`
+	#monitor: "HDMI1"; # get names from `xrandr`
 
 	# various examples for internal blocks:
 	ya_ws: {
